test/good/readString.lat
int main() {
    int n = readInt();
    string s = readString();
    printString(s + s);
    printInt(n);
    return 0;
}
