test/bad/cmp.lat
int main() {
    boolean b;
    string s;
    b < s;
}
